[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
mangrove-bootstrap = { path = "crates/mangrove-bootstrap" }
mangrove-core = { path = "crates/mangrove-core" }
mangrove-engine = { path = "crates/mangrove-engine" }
mangrove-pisa = { path = "crates/mangrove-pisa" }
mangrove-search = { path = "crates/mangrove-search" }
mangrove-train = { path = "crates/mangrove-train" }

swamp-server = { path = "crates/swamp-server" }
swamp-client = { path = "crates/swamp-client" }

rustifact = "0.10.1"
burn = "0.11.1"
burn-wgpu = "0.11.1"
serde = "1.0.195"
thiserror = "1.0.56"
rand = "0.8.5"
standard-dist = "1.0.0"
arrayvec = "0.7.4"
test-case = "3.3.1"
ringbuffer = "0.15.0"
clap = "4.4.18"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
boxcar = "0.2.4"
ractor = "0.9.3"
ractor_cluster = "0.9.3"

[workspace.package]
edition = "2021"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
unused_crate_dependencies = "warn"

[workspace.lints.clippy]
missing_safety_doc = "allow"
enum_variant_names = "allow"

[profile.release]
codegen-units = 1
lto = true

[profile.test]
inherits = "release"

[profile.bench]
inherits = "release"
