[package]
name = "after-build"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
before-build = {path = "../before-build"}

[dependencies]
arrayvec = "0.7.2"
before-build = {path = "../before-build"}
