[package]
name = "hash-bootstrap"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", features = ["min_const_gen"] }
standard-dist = "1.0.0"
rustifact = "0.9.0"