[package]
name = "hash-bootstrap"
description = "Fundamental data structures for the Hash Chess engine's build script and general usage"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { workspace = true, features = ["min_const_gen"] }
standard-dist.workspace = true
rustifact.workspace = true
thiserror.workspace = true
