[package]
name = "hash-core"
description = "Core game-related constructs for the Hash Chess Engine"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
hash-bootstrap = { path = "../hash-bootstrap" }

rustifact = "0.9.0"
rand = "0.8.5"

[dev-dependencies]
test-case = "3.2.1"

[dependencies]
hash-bootstrap = { path = "../hash-bootstrap" }

rustifact = "0.9.0"
arrayvec = "0.7.4"

