[package]
name = "hash-core"
description = "Core game-related constructs for the Hash Chess engine"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
hash-bootstrap.workspace = true
rustifact.workspace = true
rand.workspace = true

[dev-dependencies]
test-case.workspace = true

[dependencies]
hash-bootstrap.workspace = true
rustifact.workspace = true
arrayvec.workspace = true
thiserror.workspace = true
