[package]
name = "hash-engine"
description = "The Hash Chess Engine CLI"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hash-bootstrap.workspace = true
hash-core.workspace = true
hash-search.workspace = true
hash-network.workspace = true
thiserror.workspace = true
burn-wgpu.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { workspace = true, features = ["derive"] }

[lints]
workspace = true
