[package]
name = "hash-eval"
description = "This is a simple position evaluator for the Hash Chess engine to be expanded using NNs in the future"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hash-core = { path = "../hash-core" }
hash-search = { path = "../hash-search" }
