[package]
name = "hash-eval"
description = "CNN for Chess evaluation, part of the Hash Chess engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hash-core = { path = "../hash-core" }
hash-search = { path = "../hash-search" }
dfdx = "0.13.0"
