[package]
name = "hash-eval"
description = "CNN for Chess position evaluation, part of the Hash Chess Engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hash-core = { path = "../hash-core" }
hash-search = { path = "../hash-search" }
dfdx = { version = "0.13.0", features = ["nightly", "f16"] }
arrayvec = "0.7.4"
