[package]
name = "hash-network"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hash-bootstrap = { path = "../hash-bootstrap" }
hash-core = { path = "../hash-core" }
burn = "0.11.1"
serde = "1.0.188"

[lints]
workspace = true
