[package]
name = "hash-search"
description = "AlphaZero-style MCTS system for the Hash Chess Engine"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hash-core = { path = "../hash-core" }
hash-bootstrap = { path = "../hash-bootstrap" }
hash-network = { path = "../hash-network" }

arrayvec = "0.7.4"
num-traits = "0.2.17"
rand = { version = "0.8.5", features = ["min_const_gen"] }
burn = { version = "0.9.0", features = ["ndarray-blas-openblas-system"] }
serde = "1.0.189"

[lints]
workspace = true
