[package]
name = "hash-search"
description = "AlphaZero-style MCTS system for the Hash Chess Engine"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hash-core = { path = "../hash-core" }
hash-bootstrap = { path = "../hash-bootstrap" }
hash-network = { path = "../hash-network" }
arrayvec.workspace = true
num-traits.workspace = true
rand = { workspace = true, features = ["min_const_gen"] }
burn.workspace = true
burn-wgpu.workspace = true
serde.workspace = true
thiserror.workspace = true

[lints]
workspace = true
