[package]
name = "hash-search"
description = "Search code for the Hash Chess engine"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hash-core.workspace = true
hash-bootstrap.workspace = true
hash-network.workspace = true
arrayvec.workspace = true
num-traits.workspace = true
rand = { workspace = true, features = ["min_const_gen"] }
burn.workspace = true
burn-wgpu.workspace = true
serde.workspace = true
thiserror.workspace = true

[lints]
workspace = true
