[package]
name = "hash-train"
description = "Training binary for the Hash Chess Engine"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hash-core = { path = "../hash-core" }
hash-bootstrap = { path = "../hash-bootstrap" }

burn = "0.9.0"
serde = "1.0.188"

[lints]
workspace = true
