[package]
name = "hash-train"
description = "Training binary for the Hash Chess Engine"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hash-core = { path = "../hash-core" }
hash-bootstrap = { path = "../hash-bootstrap" }
hash-search = { path = "../hash-search" }
hash-network = { path = "../hash-network" }

burn = { version = "0.9.0", features = ["train", "tch"] }
serde = "1.0.188"
ringbuffer = "0.15.0"
arrayvec = "0.7.4"
rand = "0.8.5"

[lints]
workspace = true
