[package]
name = "hash-train"
description = "Training binary for the Hash Chess engine"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hash-bootstrap.workspace = true
hash-core.workspace = true
hash-search.workspace = true
hash-network.workspace = true
burn = { workspace = true, features = ["autodiff"] }
burn-wgpu.workspace = true
serde.workspace = true
ringbuffer.workspace = true
arrayvec.workspace = true
rand.workspace = true

[lints]
workspace = true
