[package]
name = "hash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "perft"
harness = false

[[bench]]
name = "fen"
harness = false

[build-dependencies]
hash-build = {path = "../hash-build"}

[dependencies]
arrayvec = "0.7.2"
hash-build = {path = "../hash-build"}
