[package]
name = "hash"
description = "The Hash Chess Engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
hash-bootstrap = { path = "../hash-bootstrap" }
rustifact = "0.9.0"
rand = "0.8.5"

[dependencies]
rustifact = "0.9.0"
arrayvec = "0.7.4"
hash-bootstrap = { path = "../hash-bootstrap" }
