[package]
name = "hash-search"
authors = ["Yoav Grimland <miestrode@proton.me>"]
version = "0.0.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hash-core.workspace = true
hash-network.workspace = true
burn.workspace = true
thiserror.workspace = true
tracing.workspace = true
boxcar.workspace = true
ringbuffer.workspace = true

[lints]
workspace = true
