[package]
name = "hash-train"
authors = ["Yoav Grimland <miestrode@proton.me>"]
version = "0.0.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hash-core.workspace = true
hash-search.workspace = true
hash-network.workspace = true
burn = { workspace = true, features = ["autodiff"] }
ringbuffer.workspace = true
rand.workspace = true

[lints]
workspace = true
