[package]
name = "mangrove-pisa"
version = "0.0.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mangrove-bootstrap.workspace = true
mangrove-core.workspace = true
burn.workspace = true
serde.workspace = true

[lints]
workspace = true
