[package]
name = "mangrove-search"
version = "0.0.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mangrove-core.workspace = true
mangrove-pisa.workspace = true
burn.workspace = true
thiserror.workspace = true
tracing.workspace = true
boxcar.workspace = true
ringbuffer.workspace = true

[lints]
workspace = true
