[package]
name = "mangrove"
version = "0.0.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = [
    "derive",
    "wrap_help",
    "color",
    "unstable-styles",
] }
mangrove-core.workspace = true
mangrove-search.workspace = true
mangrove-pisa.workspace = true
thiserror.workspace = true
burn-wgpu.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = [
    "fmt",
    "json",
    "env-filter",
] }

[lints]
workspace = true
